fix error info when start try to connect local mongodb